# search-engine

./: CMakeLists.txt  README.md  converterJson.h  fileConvertor.h  invertedIndex.cpp  invertedIndex.h  main.cpp  searchServer.cpp  searchServer.h  testSuits.h
include/: testSuits.h
src/: CMakeLists.txt  converterJson.cpp  main.cpp  testSuits.cpp
test_suits/: CMakeLists.txt  testSuits.cpp
tools/: fileConvertor.h
